# langchain-agent-chat-ui-agent-server

./: .env.example  .gitignore  README.md  agent.py  airbnb_mcp.py  langgraph.json  main.py  pyproject.toml
agents/: agent.py  personal_assistant.py
scripts/: mcp_config.json  prompts.py
server/: 02_stream_server.py  03_streamlit_client.py
